<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.FirstFragment">

    <TextView
            android:id="@+id/textview_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/camera_switch"
    />

    <TextView
            android:id="@+id/textview_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start"
            app:layout_constraintVertical_bias="0.2"/>

    <Switch
            android:id="@+id/camera_switch"
            app:key="@string/camera_switch_key"
            android:text="@string/camera_switch_text"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"/>

    <Switch
            android:id="@+id/log_switch"
            app:key="@string/log_switch_key"
            app:dependency="camera_switch"
            android:text="@string/log_switch_text"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_camera"/>

    <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_switch"
            app:layout_constraintVertical_bias="0.2"/>

</androidx.constraintlayout.widget.ConstraintLayout>